jobs/job_60783810/uncert/errors/benchmark_237/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:34:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
input.cc:50:22: error: invalid operands to binary expression ('struct list' and 'int')
  while(memory0[ptr] != m) {
        ~~~~~~~~~~~~ ^  ~
input.cc:51:11: error: indirection requires pointer operand ('long' invalid)
    ptr = *((ptr + skip));
          ^~~~~~~~~~~~~~~
1 warning and 2 errors generated.
nRgPQ_Ptr2Arr.c:34:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
nRgPQ_Ptr2Arr.c:50:22: error: invalid operands to binary expression ('struct list' and 'int')
  while(memory0[ptr] != m) {
        ~~~~~~~~~~~~ ^  ~
nRgPQ_Ptr2Arr.c:51:11: error: indirection requires pointer operand ('long' invalid)
    ptr = *((ptr + skip));
          ^~~~~~~~~~~~~~~
1 warning and 2 errors generated.
